<resources>
    <string name="app_name">Playlist maker</string>
    <string name="btn_text_search">Поиск</string>
    <string name="btn_text_library">Медиатека</string>
    <string name="btn_text_setting">Настройки</string>
    <string name="settings_license_agreement_text">Пользовательское соглашение</string>
    <string name="settings_support_text">Написать в поддержку</string>
    <string name="settings_share_text">Поделиться приложением</string>
    <string name="settings_dark_theme_text">Темная тема</string>
    <string name="settings_title_text">Настройки</string>
    <string name="input_hint">Поиск</string>
    <string name="search_title_text">Поиск</string>
    <string name="android_developer_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="license_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="letter_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="letter_topic">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="developer_email">student@yandex.ru</string>
    <string name="error_nothing_found">Ничего не нашлось</string>
    <string name="error_network_faild">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="your_search_history">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_playtime_value">00:00</string>
    <string name="mail_app_not_found">Упс, не установлен ни один почтовый клиент!</string>
    <string name="library_title_text">Медиатека</string>
    <string name="empty_favorite_text">Ваша медиатека пуста</string>
    <string name="create_playlist_button_text">Новый плейлист</string>
    <string name="empty_playlists_text">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks_tab_text">Избранные треки</string>
    <string name="playlists_tab_text">Плейлисты</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_playlist_text">Создать</string>
    <string name="description_playlist_text">Описание</string>
    <string name="playlist_name_text">Название*</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="finalize_the_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="add_to_playlist_text">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="alrady_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="empty_playlist_text">В этот плейлист пока\n не добавлен ни один трек</string>
    <string name="zero_duration_playlist">0 минут</string>
    <string name="do_you_want_delete_a_track">Хотите удалить трек?</string>
    <string name="answer_yes">Да</string>
    <string name="answer_no">Нет</string>
    <string name="nothing_to_share">В плейлисте нет ни одного трека :/</string>
    <string name="delete_playlist_question">Хотите удалить плейлист "%s"?</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save_button">Сохранить</string>
    <string name="playlist_saved">Плейлист сохранен</string>
    <plurals name="tracks_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="tracks_duration">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>