<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="28dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="?attr/title_text_color" />

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/settings_title_text" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_dark_theme"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:text="@string/settings_dark_theme_text" />

    <TextView
        android:id="@+id/btn_share"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_share_text"
        app:drawableEndCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/btn_feedback"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_support_text"
        app:drawableEndCompat="@drawable/ic_baseline_support_agent_24" />

    <TextView
        android:id="@+id/btn_license"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_license_agreement_text"
        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

</LinearLayout>