<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16dp"
    android:paddingTop="@dimen/_16dp"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.guap.vkr.playlistmaker.settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="40dp">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title_text" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_dark_theme"
        style="@style/SettingsTextStyle"
        app:trackTint="@drawable/switch_track_selector"
        app:thumbTint="@drawable/switch_thumb_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dark_theme_text" />

    <TextView
        android:id="@+id/btn_share"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_share_text"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/btn_feedback"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_support_text"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/btn_license"
        style="@style/SettingsTextStyle"
        android:text="@string/settings_license_agreement_text"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

</LinearLayout>