<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:paddingBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/btn_text_search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/btn_icon_padding"
        app:iconSize="@dimen/text_size"
        app:iconTint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/btn_text_library"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:icon="@drawable/ic_baseline_library_music_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/btn_icon_padding"
        app:iconSize="@dimen/text_size"
        app:iconTint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/btn_text_setting"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/btn_icon_padding"
        app:iconSize="@dimen/text_size"
        app:iconTint="@color/black" />

</LinearLayout>