<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".library.ui.fragments.NewPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_24dp" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/title_text_color" />

    <TextView
        android:id="@+id/tv_new_playlist_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:text="@string/new_playlist_title"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back" />

    <ImageView
        android:id="@+id/iv_playlist_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_24dp"
        android:background="@drawable/image_contour"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <ImageView
        android:id="@+id/iv_playlist_picture_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/ic_add_image"
        app:layout_constraintBottom_toBottomOf="@id/iv_playlist_picture"
        app:layout_constraintEnd_toEndOf="@id/iv_playlist_picture"
        app:layout_constraintStart_toStartOf="@id/iv_playlist_picture"
        app:layout_constraintTop_toTopOf="@id/iv_playlist_picture"
        app:tint="@color/yp_text_gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_playlist_name_layout"
        style="@style/InputFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:hint="@string/playlist_name_text"
        android:textColorHint="?attr/refresh_button_tint_color"
        app:boxStrokeColor="@color/yp_blue"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_playlist_picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_playlist_discription_layout"
        style="@style/InputFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/discription_playlist_text"
        android:textColorHint="?attr/refresh_button_tint_color"
        app:boxStrokeColor="@color/yp_blue"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/et_playlist_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_playlist"
        style="@style/CreatePlaylistButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:enabled="false"
        android:text="@string/create_playlist_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>